small clean up